fix mobile nav alignment

--- a/frontend/app/components/Navigation/subnav.module.scss
+++ b/frontend/app/components/Navigation/subnav.module.scss
@@ -49,6 +49,7 @@
       span:last-child {
         position: absolute;
         left: 0;
+        top: 0;
       }
     }
   }
